smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/invalid-statement-after-structure-name.smithy
// Syntax error at line 5, column 15: Expected LBRACE('{') but found IDENTIFIER('Baz') | Model
$version: "2"
namespace com.foo

structure Foo Baz {}
